# latchgate-integrations

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package-lock.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ai-sdk/: README.md  package-lock.json  package.json
ai-sdk/src/: discovery.ts  index.ts  toolset.ts
ai-sdk/tests/: discovery.test.ts  toolset.test.ts
common/: README.md  pyproject.toml
common/latchgate_common/: __init__.py  audit.py  discovery.py  schema.py  serialization.py  sync.py  transport.py
common/tests/: test_discovery.py  test_schema.py  test_serialization.py  test_sync.py  test_transport.py
crewai/: README.md  pyproject.toml  test_toolset.py
crewai/latchgate_crewai/: __init__.py  _tool.py  _toolset.py
examples/: README.md  ai_sdk_example.ts  crewai_example.py  langchain_example.py  openai_agents_example.py  pydantic_ai_example.py
langchain/: README.md  pyproject.toml  test_toolset.py
langchain/latchgate_langchain/: __init__.py  _tool.py  _toolset.py
openai-agents/: README.md  pyproject.toml  test_tools.py
openai-agents/latchgate_openai_agents/: __init__.py  _factory.py  _tool.py
pydantic/: README.md  pyproject.toml  test_toolset.py
pydantic/latchgate_pydantic_ai/: __init__.py  _toolset.py
