[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latchgate-integrations-common"
version = "0.1.1"
description = "Shared discovery, schema, serialization, and transport logic for LatchGate framework integrations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "latchgate-ai" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["latchgate", "ai-agents", "security", "execution-security"]

dependencies = [
    "latchgate>=0.1.0",
    "httpx>=0.27.0,<1",
    "pydantic>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.uv]
package = true
exclude-newer = "2026-06-07"
exclude-newer-package = { latchgate = "2026-06-08" }

[project.urls]
Homepage = "https://github.com/latchgate-ai/latchgate-integrations"
Repository = "https://github.com/latchgate-ai/latchgate-integrations"

[tool.hatch.build.targets.wheel]
packages = ["latchgate_common"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
