[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latchgate-crewai"
version = "0.1.1"
description = "CrewAI integration for LatchGate — execution security kernel for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Mateusz Papierz", email = "m2papierz@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["latchgate", "crewai", "ai-agents", "security", "execution-security"]

dependencies = [
    "latchgate>=0.1.0",
    "latchgate-integrations-common>=0.1.0",
    "crewai>=1.14.0,<2",
    "pydantic>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.uv]
package = true
exclude-newer = "2026-07-09"
exclude-newer-package = { latchgate = "2026-06-08" }
exclude-dependencies = ["diskcache"]
override-dependencies = [
    "litellm>=1.83.10",
    "aiohttp>=3.14.0",
]

[tool.uv.sources]
latchgate-integrations-common = { path = "../common" }

[project.urls]
Homepage = "https://github.com/latchgate-ai/latchgate-integrations"
Repository = "https://github.com/latchgate-ai/latchgate-integrations"
Documentation = "https://latchgate-docs.pages.dev/integrations/frameworks/crewai/"

[tool.hatch.build.targets.wheel]
packages = ["latchgate_crewai"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
