[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latchgate-openai-agents"
version = "0.1.1"
description = "OpenAI Agents SDK integration for LatchGate — execution security kernel for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "latchgate-ai" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["latchgate", "openai", "agents", "ai-agents", "security", "execution-security"]

dependencies = [
    "latchgate>=0.1.0",
    "latchgate-integrations-common>=0.1.0",
    "openai-agents>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.uv]
package = true
exclude-newer = "2026-06-07"
exclude-newer-package = { latchgate = "2026-06-08" }
override-dependencies = [
    "pyjwt>=2.13.0",
    "starlette>=1.0.1",
]

[tool.uv.sources]
latchgate-integrations-common = { path = "../common" }

[project.urls]
Homepage = "https://github.com/latchgate-ai/latchgate-integrations"
Repository = "https://github.com/latchgate-ai/latchgate-integrations"
Documentation = "https://latchgate-docs.pages.dev/integrations/frameworks/openai-agents/"

[tool.hatch.build.targets.wheel]
packages = ["latchgate_openai_agents"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
